--- a/public/app/profile/profile.html
+++ b/public/app/profile/profile.html
@@ -52,7 +52,48 @@
         </div>
     </header>
     <main>
+        <div class="container">
+            <div class="profile">
+                <div class="profile-photo"><img src="../../assets/img/user.png" alt=""></div>
+                <div class="profile-data">
+                    <div class="profile-login">Login: <span>aegleweb</span></div>
+                    <div class="profile-name">Name: <span>Viacheslav</span></div>
+                    <div class="profile-email">E-mail: <span>qwerty@gmail.com</span></div>
+                    <button class="edit-profile">Edit profile</button>
+                    <button class="delete-profile">Delete profile</button>
+                </div>
+            </div>
+            <div class="watch-list">
+                <h2>Your WatchList:</h2>
+                <table class="watch-list-table">
+                    <tr>
+                        <th>Movie</th>
+                        <th>Year</th>
+                        <th>Raiting</th>
+                        <th>Delete</th>
+                    </tr>
+                    <tr>
+                        <td>Star wars</td>
+                        <td>2017</td>
+                        <td>8.9</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Star wars</td>
+                        <td>2017</td>
+                        <td>8.9</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Star wars</td>
+                        <td>2017</td>
+                        <td>8.9</td>
+                        <td>-</td>
+                    </tr>
+                </table>
 
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer-menu">
