--- a/public/app/index.html
+++ b/public/app/index.html
@@ -17,28 +17,28 @@
             <div class="header-logo"><a ui-sref="home"><img src="../assets/img/logo.png" alt="Movie Store"></a></div>
             <nav>
                 <ul class="header-menu">
-                    <li class="header-menu_item item_movie"><a ui-sref="category({type: 'movie', genre: 'All'})">Movies</a>
+                    <li class="header-menu_item item_movie"><a ui-sref="store({type: 'movie', genre: 'all'})">Movies</a>
                         <ul class="header-menu_submenu">
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
                         </ul>
                     </li>
-                    <li class="header-menu_item item_animation"><a href="#">Animation</a>
+                    <li class="header-menu_item item_animation"><a ui-sref="store({type: 'animation', genre: 'all'})">Animation</a>
                         <ul class="header-menu_submenu">
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
                         </ul>
                     </li>
-                    <li class="header-menu_item item_documentary"><a href="#">Documentary</a>
+                    <li class="header-menu_item item_documentary"><a ui-sref="store({type: 'documentary', genre: 'all'})">Documentary</a>
                         <ul class="header-menu_submenu">
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
                         </ul>
                     </li>
-                    <li class="header-menu_item item_tvshow"><a href="#">TV Shows</a>
+                    <li class="header-menu_item item_tvshow"><a ui-sref="store({type: 'tvshows', genre: 'all'})">TV Shows</a>
                         <ul class="header-menu_submenu">
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
@@ -65,11 +65,13 @@
             <div class="footer-logo"><img src="../assets/img/logo-footer.png" alt="Movie Store"></div>
         </footer>
     </div>
-    <script src="../../node_modules/angular/angular.js" defer></script>
-    <script src="../../node_modules/angular-ui-router/release/angular-ui-router.js" defer></script>
-    <script src="./app.js" defer></script>
-    <script src="./app.routes.js" defer></script>
-    <script src="./root.controller.js" defer></script>
+    <script src="../../node_modules/angular/angular.js"></script>
+    <script src="../../node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="./app.js"></script>
+    <script src="./app.routes.js"></script>
+    <script src="./root.controller.js"></script>
+    <script src="./web-app/movie.service.js"></script>
+    <script src="./web-app/movie.controller.js"></script>
     <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js" defer></script>-->
     <!--<script src="../assets/js/slick.js" defer></script>-->
     <!--<script src="../assets/js/slick-slider.js" defer></script>-->
