--- a/public/app/index.html
+++ b/public/app/index.html
@@ -5,40 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Movie Store</title>
-    <base href="/app/public/app/">
+    <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
-    <link rel="stylesheet" href="../assets/css/slick.css">
-    <link rel="stylesheet" href="../assets/css/main-style.css">
-    <link rel="stylesheet" href="./web-app/web-app-style.css">
+    <!--<link rel="stylesheet" href="../assets/css/slick.css">-->
+    <link rel="stylesheet" href="/assets/css/main-style.css">
+    <link rel="stylesheet" href="/app/web-app/web-app-style.css">
 </head>
 <body>
     <div class="wrapper" ng-controller="RootCtrl as root">
         <header class="header" ng-class="{'header-fixed': !root.page()}">
-            <div class="header-logo"><a ui-sref="home"><img src="../assets/img/logo.png" alt="Movie Store"></a></div>
+            <div class="header-logo"><a ui-sref="home"><img src="/assets/img/logo.png" alt="Movie Store"></a></div>
             <nav>
                 <ul class="header-menu">
-                    <li class="header-menu_item item_movie"><a ui-sref="store({type: 'movie', genre: 'all'})">Movies</a>
+                    <li class="header-menu_item item_movie">
+                        <a ui-sref-active="active" ui-sref="store({type: 'movie', genre: 'all'})">Movies</a>
+                        <ul class="header-menu_submenu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Adventure</a></li>
+                            <li><a href="#">Comedy</a></li>
+                            <li><a href="#">Crime</a></li>
+                            <li><a href="#">Drama</a></li>
+                            <li><a href="#">Family</a></li>
+                            <li><a href="#">Fantasy</a></li>
+                            <li><a href="#">Film-Noir</a></li>
+                        </ul>
+                    </li>
+                    <li class="header-menu_item item_animation">
+                        <a ui-sref-active="active" ui-sref="store({type: 'animation', genre: 'all'})">Animation</a>
                         <ul class="header-menu_submenu">
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
                         </ul>
                     </li>
-                    <li class="header-menu_item item_animation"><a ui-sref="store({type: 'animation', genre: 'all'})">Animation</a>
+                    <li class="header-menu_item item_documentary">
+                        <a ui-sref-active="active" ui-sref="store({type: 'documentary', genre: 'all'})">Documentary</a>
                         <ul class="header-menu_submenu">
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
                         </ul>
                     </li>
-                    <li class="header-menu_item item_documentary"><a ui-sref="store({type: 'documentary', genre: 'all'})">Documentary</a>
-                        <ul class="header-menu_submenu">
-                            <li><a href="#">Adventure</a></li>
-                            <li><a href="#">Adventure</a></li>
-                            <li><a href="#">Adventure</a></li>
-                        </ul>
-                    </li>
-                    <li class="header-menu_item item_tvshow"><a ui-sref="store({type: 'tvshows', genre: 'all'})">TV Shows</a>
+                    <li class="header-menu_item item_tvshow">
+                        <a ui-sref-active="active" ui-sref="store({type: 'tvshows', genre: 'all'})">TV Shows</a>
                         <ul class="header-menu_submenu">
                             <li><a href="#">Adventure</a></li>
                             <li><a href="#">Adventure</a></li>
@@ -53,7 +62,7 @@
                 <div class="header-user_icon"></div>
             </div>
         </header>
-        <main ui-view="content" ng-class="{'main-fixed': !root.page()}"></main>
+        <main ui-view="content" ng-class="{'main-fixed': !root.page()}" ng-cloak></main>
         <footer ng-class="{'footer-none': !root.page()}">
             <div class="footer-menu">
                 <ul>
@@ -62,16 +71,16 @@
                     <li><a href="#">Terms and Conditions</a></li>
                 </ul>
             </div>
-            <div class="footer-logo"><img src="../assets/img/logo-footer.png" alt="Movie Store"></div>
+            <div class="footer-logo"><img src="/assets/img/logo-footer.png" alt="Movie Store"></div>
         </footer>
     </div>
-    <script src="../../node_modules/angular/angular.js"></script>
-    <script src="../../node_modules/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="./app.js"></script>
-    <script src="./app.routes.js"></script>
-    <script src="./root.controller.js"></script>
-    <script src="./web-app/movie.service.js"></script>
-    <script src="./web-app/movie.controller.js"></script>
+    <script src="/assets/js/angular.js"></script>
+    <script src="/assets/js/angular-ui-router.js"></script>
+    <script src="/app/app.js"></script>
+    <script src="/app/app.routes.js"></script>
+    <script src="/app/root.controller.js"></script>
+    <script src="/app/web-app/movie.service.js"></script>
+    <script src="/app/web-app/movie.controller.js"></script>
     <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js" defer></script>-->
     <!--<script src="../assets/js/slick.js" defer></script>-->
     <!--<script src="../assets/js/slick-slider.js" defer></script>-->
