--- a/public/app/web-app/web-app.html
+++ b/public/app/web-app/web-app.html
@@ -48,7 +48,8 @@
             <div class="search">
                 <input type="text" placeholder="Search movie">
             </div>
-            <div class="breadcrumbs">Movies / Adventure</div>
+            <div class="breadcrumbs"><ui-breadcrumbs displayname-property="data.displayName"></ui-breadcrumbs></div>
+
             <div class="sort">
                 <div class="tooltip">Popular
                     <span class="tooltip-text">Sort by popular</span>
@@ -64,7 +65,7 @@
         <div class="content-block">
             <div ng-repeat="movies in movie.data">
                 <p><img ng-src="{{movies.Poster}}" width="250" height="395"></p>
-                <h4><a ng-bind="movies.Title" ui-sref="movie({ movie_id: movies._id })"></a></h4>
+                <h4><a ng-bind="movies.Title" ui-sref="movie({movie_id: movies._id})"></a></h4>
                 <p><span ng-bind="movies.Year"></span> | <span ng-bind="movies.Country"></span></p>
             </div>
         </div>
