--- a/public/app/web-app/web-app.html
+++ b/public/app/web-app/web-app.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="movie-container">
     <div class="filter-position">
         <div class="filter">
             <div class="filter-title">Choose filter:</div>
