--- a/public/app/index.html
+++ b/public/app/index.html
@@ -10,10 +10,11 @@
     <!--<link rel="stylesheet" href="../assets/css/slick.css">-->
     <link rel="stylesheet" href="/assets/css/main-style.css">
     <link rel="stylesheet" href="/app/web-app/web-app-style.css">
+    <link rel="stylesheet" href="/app/profile/profile-style.css">
 </head>
 <body>
     <div class="wrapper" ng-controller="RootCtrl as root">
-        <header class="header" ng-class="{'header-fixed': !root.page()}">
+        <header class="header" ng-class="{'header-fixed': root.page()}">
             <div class="header-logo"><a ui-sref="home"><img src="/assets/img/logo.png" alt="Movie Store"></a></div>
             <nav>
                 <ul class="header-menu">
@@ -58,14 +59,14 @@
             </nav>
             <div class="header-user">
                 <div class="header-user_photo"><img src="../assets/img/profile-photo.png" alt=""></div>
-                <div class="header-user_name">Carol Danvers</div>
+                <div class="header-user_name"><a ui-sref="profile">Carol Danvers</a></div>
                 <div class="header-user_icon"></div>
             </div>
         </header>
-        <main ng-class="{'main-fixed': !root.page()}" ng-cloak>
+        <main ng-class="{'main-fixed': root.page()}" ng-cloak>
             <div ui-view></div>
         </main>
-        <footer ng-class="{'footer-none': !root.page()}">
+        <footer ng-class="{'footer-none': root.page()}">
             <div class="footer-menu">
                 <ul>
                     <li><a href="#">About</a></li>
@@ -76,8 +77,8 @@
             <div class="footer-logo"><img src="/assets/img/logo-footer.png" alt="Movie Store"></div>
         </footer>
     </div>
-    <script src="/assets/js/angular.js"></script>
-    <script src="/assets/js/angular-ui-router.js"></script>
+    <script src="/assets/js/angular.min.js"></script>
+    <script src="/assets/js/angular-ui-router.min.js"></script>
     <script src="/app/app.js"></script>
     <script src="/app/app.routes.js"></script>
     <script src="/app/root.controller.js"></script>
@@ -85,6 +86,8 @@
     <script src="/app/web-app/movies.controller.js"></script>
     <script src="/app/web-app/breadcrumbs/uiBreadcrumbs.js"></script>
     <script src="/app/web-app/movie-info/movie-info.controller.js"></script>
+    <script src="/app/profile/user.controller.js"></script>
+    <script src="/app/profile/user.service.js"></script>
     <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js" defer></script>-->
     <!--<script src="../assets/js/slick.js" defer></script>-->
     <!--<script src="../assets/js/slick-slider.js" defer></script>-->
