--- a/public/app/index.html
+++ b/public/app/index.html
@@ -88,6 +88,7 @@
     <script src="/app/web-app/movie-info/movie-info.controller.js"></script>
     <script src="/app/profile/user.controller.js"></script>
     <script src="/app/profile/user.service.js"></script>
+    <script src="/app/main/main.controller.js"></script>
     <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js" defer></script>-->
     <!--<script src="../assets/js/slick.js" defer></script>-->
     <!--<script src="../assets/js/slick-slider.js" defer></script>-->
