--- a/public/app/main/home.html
+++ b/public/app/main/home.html
@@ -10,28 +10,28 @@
         </div>
         <button class="watch_now">Watch now</button>
     </div>
-    <!--<div class="slide">-->
-        <!--<img src="../assets/img/slider/slide2.jpg" alt="">-->
-        <!--<div class="slide_text">-->
-            <!--<div class="slide_info">Published <span>Feb 20, 2017</span></div>-->
-            <!--<div class="slide_info">Rating <span>7.1</span></div>-->
-            <!--<div class="elem_position slide_download">487</div>-->
-            <!--<div class="elem_position slide_comments">14</div>-->
-            <!--<div class="elem_position slide_like">7,364</div>-->
-        <!--</div>-->
-        <!--<button class="watch_now">Watch now</button>-->
-    <!--</div>-->
-    <!--<div class="slide">-->
-        <!--<img src="../assets/img/slider/slide3.jpg" alt="">-->
-        <!--<div class="slide_text">-->
-            <!--<div class="slide_info">Published <span>Feb 20, 2017</span></div>-->
-            <!--<div class="slide_info">Rating <span>7.1</span></div>-->
-            <!--<div class="elem_position slide_download">487</div>-->
-            <!--<div class="elem_position slide_comments">14</div>-->
-            <!--<div class="elem_position slide_like">7,364</div>-->
-        <!--</div>-->
-        <!--<button class="watch_now">Watch now</button>-->
-    <!--</div>-->
+    <div class="slide">
+        <img src="../assets/img/slider/slide2.jpg" alt="">
+        <div class="slide_text">
+            <div class="slide_info">Published <span>Feb 20, 2017</span></div>
+            <div class="slide_info">Rating <span>7.1</span></div>
+            <div class="elem_position slide_download">487</div>
+            <div class="elem_position slide_comments">14</div>
+            <div class="elem_position slide_like">7,364</div>
+        </div>
+        <button class="watch_now">Watch now</button>
+    </div>
+    <div class="slide">
+        <img src="../assets/img/slider/slide3.jpg" alt="">
+        <div class="slide_text">
+            <div class="slide_info">Published <span>Feb 20, 2017</span></div>
+            <div class="slide_info">Rating <span>7.1</span></div>
+            <div class="elem_position slide_download">487</div>
+            <div class="elem_position slide_comments">14</div>
+            <div class="elem_position slide_like">7,364</div>
+        </div>
+        <button class="watch_now">Watch now</button>
+    </div>
 </div>
 <div class="first-row">
     <h1>All the Movies You Need. Guaranteed.</h1>
