--- a/public/app/contact/contact.html
+++ b/public/app/contact/contact.html
@@ -1,99 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Contact</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
-    <link rel="stylesheet" href="../../assets/css/main-style.css">
-    <link rel="stylesheet" href="./contact-style.css">
-</head>
-<body>
-<div class="wrapper">
-    <header class="header">
-        <div class="header-logo"><a href="#"><img src="../../assets/img/logo.png" alt="Movie Store"></a></div>
-        <nav>
-            <ul class="header-menu">
-                <li class="header-menu_item item_movie"><a href="#">Movies</a>
-                    <ul class="header-menu_submenu">
-                        <li><a href="#">Adventure</a></li>
-                        <li><a href="#">Adventure</a></li>
-                        <li><a href="#">Adventure</a></li>
-                    </ul>
-                </li>
-                <li class="header-menu_item item_animation"><a href="#">Animation</a>
-                    <ul class="header-menu_submenu">
-                        <li><a href="#">Adventure</a></li>
-                        <li><a href="#">Adventure</a></li>
-                        <li><a href="#">Adventure</a></li>
-                    </ul>
-                </li>
-                <li class="header-menu_item item_documentary"><a href="#">Documentary</a>
-                    <ul class="header-menu_submenu">
-                        <li><a href="#">Adventure</a></li>
-                        <li><a href="#">Adventure</a></li>
-                        <li><a href="#">Adventure</a></li>
-                    </ul>
-                </li>
-                <li class="header-menu_item item_tvshow"><a href="#">TV Shows</a>
-                    <ul class="header-menu_submenu">
-                        <li><a href="#">Adventure</a></li>
-                        <li><a href="#">Adventure</a></li>
-                        <li><a href="#">Adventure</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-        <div class="header-user">
-            <div class="header-user_photo"><img src="../../assets/img/profile-photo.png" alt=""></div>
-            <div class="header-user_name">Carol Danvers</div>
-            <div class="header-user_icon"></div>
-        </div>
-    </header>
-    <main>
-        <div class="contact">
-            <h1>Contact to Movie Store</h1>
-            <p>We respond within an hour daytime on the weekdays, unless insomnia.</p>
-            <p>Our hearts are with you 24/7.</p>
-            <form action="#" method="post">
-                <p>GOT QUESTIONS?</p>
-                <fieldset>
-                    <input placeholder="Your name" type="text" tabindex="1" required autofocus>
-                </fieldset>
-                <fieldset>
-                    <input placeholder="Your Email Address" type="email" tabindex="2" required>
-                </fieldset>
-                <fieldset>
-                    <input placeholder="Your Phone Number (optional)" type="tel" tabindex="3" required>
-                </fieldset>
-                <fieldset>
-                    <input placeholder="Your Web Site (optional)" type="url" tabindex="4" required>
-                </fieldset>
-                <fieldset>
-                    <textarea placeholder="Type your message here...." tabindex="5" required></textarea>
-                </fieldset>
-                <fieldset>
-                    <button name="submit" type="submit" data-submit="...Sending">Submit</button>
-                </fieldset>
-            </form>
-        </div>
-        <div id="map"></div>
-    </main>
-    <footer>
-        <div class="footer-menu">
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Terms and Conditions</a></li>
-            </ul>
-        </div>
-        <div class="footer-logo"><img src="../../assets/img/logo-footer.png" alt="Movie Store"></div>
-    </footer>
+<div class="map-container">
+    <div class="contact">
+        <h1>Contact to Movie Store</h1>
+        <p>We respond within an hour daytime on the weekdays, unless insomnia.</p>
+        <p>Our hearts are with you 24/7.</p>
+        <form action="#" method="post">
+            <p>GOT QUESTIONS?</p>
+            <fieldset>
+                <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+            </fieldset>
+            <fieldset>
+                <input placeholder="Your Email Address" type="email" tabindex="2" required>
+            </fieldset>
+            <fieldset>
+                <input placeholder="Your Phone Number (optional)" type="tel" tabindex="3" required>
+            </fieldset>
+            <fieldset>
+                <input placeholder="Your Web Site (optional)" type="url" tabindex="4" required>
+            </fieldset>
+            <fieldset>
+                <textarea placeholder="Type your message here...." tabindex="5" required></textarea>
+            </fieldset>
+            <fieldset>
+                <button name="submit" type="submit" data-submit="...Sending">Submit</button>
+            </fieldset>
+        </form>
+    </div>
+    <div id="map"></div>
 </div>
-<script src="./map-init.js"></script>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdsW0s_iCCxNY50jmKHtHHBHP5c0y7evs&callback=initMap">
-</script>
-</body>
-</html>
