--- a/public/app/contact/contact.html
+++ b/public/app/contact/contact.html
@@ -3,7 +3,7 @@
         <h1>Contact to Movie Store</h1>
         <p>We respond within an hour daytime on the weekdays, unless insomnia.</p>
         <p>Our hearts are with you 24/7.</p>
-        <form action="#" method="post">
+        <form class="contact-form" action="#" method="post">
             <p>GOT QUESTIONS?</p>
             <fieldset>
                 <input placeholder="Your name" type="text" tabindex="1" required autofocus>
