--- a/public/app/index.html
+++ b/public/app/index.html
@@ -7,11 +7,11 @@
     <title>Movie Store</title>
     <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
-    <!--<link rel="stylesheet" href="../assets/css/slick.css">-->
     <link rel="stylesheet" href="/assets/css/main-style.css">
     <link rel="stylesheet" href="/app/web-app/web-app-style.css">
     <link rel="stylesheet" href="/app/profile/profile-style.css">
     <link rel="stylesheet" href="/app/contact/contact-style.css">
+    <link rel="stylesheet" href="/app/login/login.css">
 </head>
 <body>
     <div class="wrapper" ng-controller="RootCtrl as root">
@@ -59,9 +59,8 @@
                 </ul>
             </nav>
             <div class="header-user">
-                <div class="header-user_photo"><img src="../assets/img/profile-photo.png" alt=""></div>
-                <div class="header-user_name"><a ui-sref="profile">Carol Danvers</a></div>
-                <div class="header-user_icon"></div>
+                <div class="login"><a ui-sref-active="active" ui-sref="login">Login</a></div>
+                <div class="register"><a ui-sref-active="active" ui-sref="register">Register</a></div>
             </div>
         </header>
         <main ng-class="{'main-fixed': root.page()}" ng-cloak>
@@ -81,8 +80,10 @@
     <script src="/assets/js/angular.min.js"></script>
     <script src="/assets/js/angular-ui-router.min.js"></script>
     <script src="/app/app.js"></script>
+    <script src="/app/app.run.js"></script>
     <script src="/app/app.routes.js"></script>
     <script src="/app/root.controller.js"></script>
+    <script src="/app/auth/auth.service.js"></script>
     <script src="/app/web-app/movies.service.js"></script>
     <script src="/app/web-app/movies.controller.js"></script>
     <script src="/app/web-app/breadcrumbs/uiBreadcrumbs.js"></script>
@@ -91,6 +92,8 @@
     <script src="/app/profile/user.service.js"></script>
     <script src="/app/main/main.controller.js"></script>
     <script src="/app/contact/contact.controller.js"></script>
+    <script src="/app/login/login.controller.js"></script>
+    <script src="/app/register/register.controller.js"></script>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdsW0s_iCCxNY50jmKHtHHBHP5c0y7evs">
     </script>
