--- a/public/app/index.html
+++ b/public/app/index.html
@@ -77,8 +77,9 @@
             <div class="footer-logo"><img src="/assets/img/logo-footer.png" alt="Movie Store"></div>
         </footer>
     </div>
-    <script src="/assets/js/angular.min.js"></script>
+    <script src="/assets/js/angular.js"></script>
     <script src="/assets/js/angular-ui-router.min.js"></script>
+    <script src="/assets/js/angular-jwt.js"></script>
     <script src="/app/app.js"></script>
     <script src="/app/app.run.js"></script>
     <script src="/app/app.routes.js"></script>
