--- a/public/app/index.html
+++ b/public/app/index.html
@@ -8,6 +8,7 @@
     <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="/assets/css/main-style.css">
+    <link rel="stylesheet" href="/app/main/home.css">
     <link rel="stylesheet" href="/app/web-app/web-app-style.css">
     <link rel="stylesheet" href="/app/profile/profile-style.css">
     <link rel="stylesheet" href="/app/contact/contact-style.css">
