--- a/public/app/web-app/movie-info/movie-info.html
+++ b/public/app/web-app/movie-info/movie-info.html
@@ -21,7 +21,10 @@
         <div class="content-block">
             <div><p><img ng-src="{{movie.data.Poster}}"></p></div>
             <div><h1 ng-bind="movie.data.Title"></h1></div>
-            <button ng-click="movie.addMovieToWatchList()">Add</button>
+            <div ng-if="isAuthenticated">
+                <button ng-if="!movie.isMovieInWatchlist()" ng-click="movie.addMovieToWatchList()">Add</button>
+                <button ng-if="movie.isMovieInWatchlist()" ng-click="movie.removeMovieFromWatchList()">Add</button>
+            </div>
         </div>
     </div>
 </div>
