--- a/public/app/index.html
+++ b/public/app/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/assets/css/main-style.css">
     <link rel="stylesheet" href="/app/main/home.css">
     <link rel="stylesheet" href="/app/web-app/web-app-style.css">
+    <link rel="stylesheet" href="/app/web-app/movie-info/movie-info.css">
     <link rel="stylesheet" href="/app/profile/profile-style.css">
     <link rel="stylesheet" href="/app/contact/contact-style.css">
     <link rel="stylesheet" href="/app/login/login.css">
@@ -96,7 +97,7 @@
     <script src="/app/web-app/movies.controller.js"></script>
     <script src="/app/web-app/breadcrumbs/uiBreadcrumbs.js"></script>
     <script src="/app/web-app/movie-info/movie-info.controller.js"></script>
-    <script src="/app/profile/user.controller.js"></script>
+    <script src="/app/profile/profile.controller.js"></script>
     <script src="/app/profile/user.service.js"></script>
     <script src="/app/main/main.controller.js"></script>
     <script src="/app/contact/contact.controller.js"></script>
