--- a/public/app/profile/profile.html
+++ b/public/app/profile/profile.html
@@ -31,10 +31,9 @@
                         <td ng-bind="movie.Year"></td>
                         <td ng-bind="movie.Type"></td>
                         <td ng-bind="movie.imdbRating"></td>
-                        <td><button ng-click="user.removeMovieFromWatchList(movie._id)"></button></td>
+                        <td><button ng-click="user.removeMovieFromWatchList(movie._id)">-</button></td>
                     </tr>
                 </table>
-
             </div>
 </div>
 
