--- a/public/app/web-app/breadcrumbs/uiBreadcrumbs.html
+++ b/public/app/web-app/breadcrumbs/uiBreadcrumbs.html
@@ -1,5 +1,1 @@
-<ol>
-    <li ng-repeat="crumb in breadcrumbs"
-        ng-class="{ active: $last }"><a ui-sref="{{ crumb.route }}" ng-if="!$last">{{ crumb.displayName }}&nbsp;</a><span ng-show="$last">{{ crumb.displayName }}</span>
-    </li>
-</ol>
+<div ng-repeat="crumb in breadcrumbs">{{ crumb.displayName }}</div>
