--- a/public/app/web-app/web-app.html
+++ b/public/app/web-app/web-app.html
@@ -69,15 +69,12 @@
                 <p><span ng-bind="movies.Year"></span> | <span ng-bind="movies.Country"></span></p>
             </div>
         </div>
-        <div class="pagination">
-            <a href="#">&laquo;</a>
-            <a href="#">1</a>
-            <a href="#" class="active">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
-            <a href="#">6</a>
-            <a href="#">&raquo;</a>
+        <div class="pagination" ng-repeat="">
+            <button ng-disabled="movie.curentpage > 1" ng-click="movie.getPreviousPage()">&laquo;</button>
+            <button class="active">1</button>
+            <button >2</button>
+            <button >3</button>
+            <button ng-disabled="movie.curentpage < movie.totalpages" ng-click="movie.getNextPage()">&raquo;</button>
         </div>
     </div>
 </div>
