--- a/public/app/web-app/web-app.html
+++ b/public/app/web-app/web-app.html
@@ -46,7 +46,9 @@
     <div class="content">
         <div class="search-row">
             <div class="search">
-                <input type="text" placeholder="Search movie">
+                <form ng-submit="movie.Search(searchPhrase)">
+                    <input type="text" ng-model="searchPhrase" placeholder="Search movie">
+                </form>
             </div>
             <div class="breadcrumbs"><ui-breadcrumbs displayname-property="data.displayName"></ui-breadcrumbs></div>
 
