--- a/public/app/index.html
+++ b/public/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/app/profile/profile-style.css">
     <link rel="stylesheet" href="/app/contact/contact-style.css">
     <link rel="stylesheet" href="/app/login/login.css">
+    <link rel="stylesheet" href="/app/search/search.css">
 </head>
 <body>
     <div class="wrapper" ng-controller="RootCtrl as root">
@@ -103,6 +104,7 @@
     <script src="/app/contact/contact.controller.js"></script>
     <script src="/app/login/login.controller.js"></script>
     <script src="/app/register/register.controller.js"></script>
+    <script src="/app/search/search.controller.js"></script>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdsW0s_iCCxNY50jmKHtHHBHP5c0y7evs">
     </script>
