--- a/public/app/profile/profile.html
+++ b/public/app/profile/profile.html
@@ -5,14 +5,14 @@
                     <div class="profile-login">Login: <span ng-bind="user.profile.login"></span></div>
                     <div class="profile-name">Name: <span ng-bind="user.profile.name"></span></div>
                     <div class="profile-email">E-mail: <span ng-bind="user.profile.email"></span></div>
-                    <button class="edit-profile">Edit profile</button>
-                    <button class="delete-profile">Delete profile</button>
+                    <button class="edit-profile">Add movie</button>
+                    <!--<button class="delete-profile">Delete profile</button>-->
                 </div>
             </div>
             <div class="watch-list">
                 <h2>Your Watch List:</h2>
                 <form>
-                    <div class="">
+                    <div>
                         <input type="text" ng-model="searchKeyword" placeholder="Search">
                     </div>
                 </form>
