--- a/public/app/index.html
+++ b/public/app/index.html
@@ -105,8 +105,7 @@
     <script src="/app/login/login.controller.js"></script>
     <script src="/app/register/register.controller.js"></script>
     <script src="/app/search/search.controller.js"></script>
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdsW0s_iCCxNY50jmKHtHHBHP5c0y7evs">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdsW0s_iCCxNY50jmKHtHHBHP5c0y7evs">
     </script>
 </body>
 </html>
