--- a/public/app/register/register.html
+++ b/public/app/register/register.html
@@ -5,6 +5,9 @@
             <input placeholder="Login" type="text" ng-model="registerForm.login" required autofocus>
         </fieldset>
         <fieldset>
+            <input placeholder="Name" type="text" ng-model="registerForm.name" autofocus>
+        </fieldset>
+        <fieldset>
             <input placeholder="Password" type="password" ng-model="registerForm.password" required>
         </fieldset>
         <fieldset>
