--- a/public/app/web-app/movie-info/movie-info.html
+++ b/public/app/web-app/movie-info/movie-info.html
@@ -1,21 +1,11 @@
 <div class="container">
     <div class="content">
         <div class="search-row">
-            <div class="search">
-                <input type="text" placeholder="Search movie">
-            </div>
             <div class="breadcrumbs"><ui-breadcrumbs displayname-property="data.displayName"></ui-breadcrumbs></div>
-
-            <div class="sort">
-                <div class="tooltip">Popular
-                    <span class="tooltip-text">Sort by popular</span>
-                </div>
-                <div class="tooltip">Last
-                    <span class="tooltip-text">Last added</span>
-                </div>
-                <div class="tooltip">Soon
-                    <span class="tooltip-text">Soon in cinema</span>
-                </div>
+            <div class="search">
+                <form ng-submit="movie.Search(searchPhrase)">
+                    <input type="text" ng-model="searchPhrase" placeholder="Search movie">
+                </form>
             </div>
         </div>
         <div class="content-block">
