--- a/public/app/profile/profile.html
+++ b/public/app/profile/profile.html
@@ -5,7 +5,7 @@
                     <div class="profile-login">Login: <span ng-bind="user.profile.login"></span></div>
                     <div class="profile-name">Name: <span ng-bind="user.profile.name"></span></div>
                     <div class="profile-email">E-mail: <span ng-bind="user.profile.email"></span></div>
-                    <button class="edit-profile">Add movie</button>
+                    <a ui-sref="add-movie"><button class="edit-profile">Add movie to store</button></a>
                     <!--<button class="delete-profile">Delete profile</button>-->
                 </div>
             </div>
