--- a/public/app/web-app/web-app.html
+++ b/public/app/web-app/web-app.html
@@ -2,7 +2,7 @@
     <div class="filter-position">
         <div class="filter">
             <div class="filter-title">Choose filter:</div>
-            <div >
+            <div>
                 <ul>
                     <li class="filter-item">Ganre
                         <ul>
@@ -52,14 +52,14 @@
             </div>
             <div class="breadcrumbs"><ui-breadcrumbs displayname-property="data.displayName"></ui-breadcrumbs></div>
             <div class="sort">
-                <div class="tooltip">Popular
+                <div ng-click="movie.sortMovieByParam('popular')" class="tooltip">Popular
                     <span class="tooltip-text">Sort by popular</span>
                 </div>
-                <div class="tooltip">Last
+                <div ng-click="movie.sortMovieByParam('date')" class="tooltip">Last
                     <span class="tooltip-text">Last added</span>
                 </div>
-                <div class="tooltip">Soon
-                    <span class="tooltip-text">Soon in cinema</span>
+                <div ng-click="movie.getTopWatchlist()" class="tooltip">Top
+                    <span class="tooltip-text">Top in watchlist</span>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
                 <p><span ng-bind="movies.Year"></span> | <span ng-bind="movies.Country"></span></p>
             </div>
         </div>
-        <div class="pagination">
+        <div class="pagination" ng-if="movie.totalpages > 1">
             <button ng-disabled="movie.curentpage == 1" ng-click="movie.getPreviousPage()">&laquo; Previous</button>
             <p>{{movie.curentpage}} from {{movie.totalpages}}</p>
             <button ng-disabled="movie.curentpage == movie.totalpages" ng-click="movie.getNextPage()">Next &raquo;</button>
